--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -36,9 +36,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Frontend</a></li>
-            <li><a href="#">Logout</a></li>
+            <li><%= link_to "Dashboard", admin_dashboard_path %></li>
+            <li><%= link_to "Frontend", root_path %></li>
+            <li><%= link_to('Logout', destroy_admin_session_path, :method => :delete) %>  </li>
           </ul>
         </div>
       </div>
@@ -48,17 +48,16 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Export</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Nav item</a></li>
-            <li><a href="">Nav item again</a></li>
+            <li><%= link_to "Dashboard", admin_dashboard_path %></li>
+            <li><%= link_to "Movies", admin_movies_path %></a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <% flash.each do |key, value| %>
+          <div class="<%= bootstrap_class_for(key) %>">
+              <%= value %>
+          </div>
+        <% end %>
         <%= yield %>
         </div>
       </div>
