--- a/app/views/admin/movies/_form.html.erb
+++ b/app/views/admin/movies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([:admin, @movie]) do |f| %>
+<%= simple_form_for [:admin, @movie], html: { class: 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
