--- a/app/views/admin/movies/show.html.erb
+++ b/app/views/admin/movies/show.html.erb
@@ -21,6 +21,7 @@
 </p>
 
 <%= render "shows_list" %>
+<%= render "show_form" %>
 
 <%= link_to 'Edit', edit_admin_movie_path(@movie) %> |
 <%= link_to 'Back', admin_movies_path %>
