--- a/app/views/admin/movies/edit.html.erb
+++ b/app/views/admin/movies/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @movie %> |
+<%= link_to 'Show', [:admin, @movie] %> |
 <%= link_to 'Back', admin_movies_path %>
