before adding tickets

--- a/app/views/admin/movies/show.html.erb
+++ b/app/views/admin/movies/show.html.erb
@@ -20,8 +20,9 @@
   <%= @movie.country %>
 </p>
 
-<%= render "shows_list" %>
-<%= render "show_form" %>
-
 <%= link_to 'Edit', edit_admin_movie_path(@movie) %> |
 <%= link_to 'Back', admin_movies_path %>
+
+<%= render "shows_list" %>
+<%= render :partial => "admin/shows/form" %>
+
