--- a/app/views/admin/shows/_form.html.erb
+++ b/app/views/admin/shows/_form.html.erb
@@ -1,8 +1,7 @@
 <h3>Add show</h3>
-<% @a = @movie.shows.build() %>
 <div class="row">
 <div class="col-lg-6">
-<%= form_for([:admin, @movie, @a], html: {class: "form-horizontal"}) do |f| %>
+<%= form_for([:admin, @movie, @show], html: {class: "form-horizontal"}) do |f| %>
    <div class="form-group">
     <label class="col-sm-2 control-label">Price</label>
       <div class="col-sm-10">
@@ -18,7 +17,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Date and time</label>
 		<div class="col-sm-10">
-		    <div class='input-group date datetimepicker' data-date-format="DD/MM/YYYY LT">
+		    <div class='input-group date datetimepicker' data-date-format="YYYY-MM-DD hh:mm:ss UTC">
 		        <%= f.text_field :start, class: "form-control"%>
 		        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
 		        </span>
