--- a/app/views/admin/movies/_shows_list.html.erb
+++ b/app/views/admin/movies/_shows_list.html.erb
@@ -1,11 +1,12 @@
-<h2>Shows for movie</h1>
+<h2>Shows for movie</h2>
 
 <table class="table">
   <thead>
     <tr>
       <th>starts</th>
       <th>price</th>
-      <th>screen_id</th>
+      <th>screen</th>
+      <th>tickets sold</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
         <td><%= show.start %></td>
         <td><%= number_to_currency show.price %></td>
         <td><%= show.screen_id %></td>
+        <td><%= show.ticket_count %> </td>
         <td><%= link_to 'Show', [:admin, @movie, show] %></td>
         <td><%= link_to 'Edit', edit_admin_movie_show_path(@movie, show) %></td>
         <td><%= link_to 'Destroy', [:admin, @movie, show], method: :delete, data: { confirm: 'Are you sure?' } %></td>
