added check_ticket functionality

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -50,11 +50,13 @@
           <ul class="nav nav-sidebar">
             <li><%= link_to "Dashboard", admin_dashboard_path %></li>
             <li><%= link_to "Movies", admin_movies_path %></a></li>
+            <li><%= link_to "Check Tickets", admin_check_ticket_path %></a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <% flash.each do |key, value| %>
-          <div class="<%= bootstrap_class_for(key) %>">
+          <div class="alert <%= bootstrap_class_for(key) %> fade in">
+              <button class="close" data-dismiss="alert">×</button>
               <%= value %>
           </div>
         <% end %>
