--- a/app/views/admin/movies/index.html.erb
+++ b/app/views/admin/movies/index.html.erb
@@ -8,7 +8,7 @@
       <th>Year</th>
       <th>Description</th>
       <th>Country</th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
@@ -20,9 +20,11 @@
         <td><%= movie.year %></td>
         <td><%= movie.description %></td>
         <td><%= movie.country %></td>
-        <td><%= link_to 'Show', [:admin, movie] %></td>
-        <td><%= link_to 'Edit', edit_admin_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', [:admin, movie], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+        <%= link_to 'Show', [:admin, movie], class: "btn btn-default btn-sm" %>
+        <%= link_to 'Edit', edit_admin_movie_path(movie), class: "btn btn-default btn-sm" %>
+        <%= link_to 'Destroy', [:admin, movie], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm"  %>
+        </td>
       </tr>
     <% end %>
   </tbody>
