--- a/app/views/admin/shows/_form.html.erb
+++ b/app/views/admin/shows/_form.html.erb
@@ -17,7 +17,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Date and time</label>
 		<div class="col-sm-10">
-		    <div class='input-group date datetimepicker' data-date-format="YYYY-MM-DD hh:mm:ss UTC">
+		    <div class='input-group date datetimepicker' data-date-format="YYYY-MM-DD HH:mm:ss UTC">
 		        <%= f.text_field :start, class: "form-control"%>
 		        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
 		        </span>
