--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,2 +1,4 @@
-<h1 class="page-header">Admin::Dashboard#index</h1>
-<p>Find me in app/views/admin/dashboard/index.html.erb</p>
+<h1 class="page-header">Dashboard</h1>
+
+<h2>Todays shows</h2>
+<%= render "todays_shows" %>
