--- a/app/views/admin/tickets/_list.html.erb
+++ b/app/views/admin/tickets/_list.html.erb
@@ -1,10 +1,10 @@
 <table class="table">
   <thead>
     <tr>
-      <th>seat</th>
-      <th>purchase_id</th>
-      <th>purchaser</th>
-      <th colspan="3"></th>
+      <th>Seat</th>
+      <th>Customer</th>
+      <th>Emitted</th>
+      <th>Purchase_id</th>
     </tr>
   </thead>
 
@@ -12,8 +12,9 @@
     <% @tickets.each do |ticket| %>
       <tr>
         <td><%= ticket.seat %></td>
-        <td><%= ticket.purchase_id %></td>
         <td><%= ticket.purchase.name %></td>
+        <td><%= ticket.created_at.to_s(:short) %></td>
+        <td><%= ticket.purchase_id %></td>
       </tr>
     <% end %>
   </tbody>
