--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -50,6 +50,7 @@
           <ul class="nav nav-sidebar">
             <li><%= link_to "Dashboard", admin_dashboard_path %></li>
             <li><%= link_to "Movies", admin_movies_path %></a></li>
+            <li><%= link_to "Manage Screens", admin_screens_path %></a></li>
             <li><%= link_to "Check Tickets", admin_check_ticket_path %></a></li>
           </ul>
         </div>
