--- a/app/views/admin/shows/_form.html.erb
+++ b/app/views/admin/shows/_form.html.erb
@@ -9,9 +9,9 @@
       </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-2 control-label">Screen-id</label>
+    <label class="col-sm-2 control-label">Screen</label>
       <div class="col-sm-10">
-      <%= f.text_field :screen_id, class: "form-control" %>
+      <%= f.collection_select(:screen_id, Screen.all, :id, :id, {}, {class: "form-control"}) %>
       </div>
   </div>
 	<div class="form-group">
