--- a/app/views/admin/shows/_form.html.erb
+++ b/app/views/admin/shows/_form.html.erb
@@ -3,9 +3,13 @@
 <div class="col-lg-6">
 <%= form_for([:admin, @movie, @show], html: {class: "form-horizontal"}) do |f| %>
    <div class="form-group">
+
     <label class="col-sm-2 control-label">Price</label>
       <div class="col-sm-10">
+      <div class="input-group">
+      <span class="input-group-addon">$</span>
       <%= f.text_field :price, class: "form-control" %>
+      </div>
       </div>
   </div>
   <div class="form-group">
