--- a/app/views/admin/shows/show.html.erb
+++ b/app/views/admin/shows/show.html.erb
@@ -9,5 +9,7 @@ Avaiable Seats:
 <%= @show.avaiable_seats %>
 </p>
 
+<%= render "seats_selector" %>
+
 <h2>Tickets for current show</h2>
 <%= render 'admin/tickets/list' %>
