--- a/app/views/admin/screens/_form.html.erb
+++ b/app/views/admin/screens/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([:admin, @admin_screen]) do |f| %>
+<%= simple_form_for([:admin, @screen]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
