--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <script src="/bootstrap-calendar/js/calendar.js"></script>
+    <link rel="stylesheet" type="text/css" href="/bootstrap-calendar/css/calendar.css">
     <%= csrf_meta_tags %>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
