--- a/app/views/admin/screens/show.html.erb
+++ b/app/views/admin/screens/show.html.erb
@@ -2,13 +2,13 @@
 
 <p>
   <strong>Avaiable:</strong>
-  <%= @admin_screen.avaiable %>
+  <%= @screen.avaiable %>
 </p>
 
 <p>
   <strong>Seats string:</strong>
-  <%= @admin_screen.seats_string %>
+  <%= @screen.seats_string %>
 </p>
 
-<%= link_to 'Edit', edit_admin_screen_path(@admin_screen) %> |
+<%= link_to 'Edit', edit_admin_screen_path(@screen) %> |
 <%= link_to 'Back', admin_screens_path %>
