--- a/app/views/home/_todays_shows.html.erb
+++ b/app/views/home/_todays_shows.html.erb
@@ -2,26 +2,21 @@
   <thead>
     <tr>
       <th>Starts</th>
-      <th>Movie</th>
       <th>Price</th>
       <th>Screen</th>
-      <th>Tickets Sold</th>
       <th>Avaiable seats</th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @shows.each do |show| %>
       <tr>
-        <td><%= show.start.to_s(:time) %></td>
+        <td><%= show.start.to_s(:short) %></td>
         <td><%= number_to_currency show.price %></td>
         <td><%= show.screen_id %></td>
-        <td><%= show.ticket_count %> </td>
         <td><%= show.avaiable_seats.length %></td>
-        <td>
-
-        </td>
+        <td><%= link_to "Buy now", buy_tickets_path(show_id: show.id), class: "btn btn-primary btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
