--- a/app/views/admin/screens/edit.html.erb
+++ b/app/views/admin/screens/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [:admin, @admin_screen] %> |
+<%= link_to 'Show', [:admin, @screen] %> |
 <%= link_to 'Back', admin_screens_path %>
